# default-1

./: README.md  setup.py
fraud_detection_system/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml  setup.sh
fraud_detection_system/config/: settings.yaml
fraud_detection_system/data/raw/: transactions.csv
fraud_detection_system/scripts/: generate_synthetic_transactions.py  sync_s3.py
fraud_detection_system/src/data_preprocessing/: feature_store.py  transform_data.py
fraud_detection_system/src/utils/: config_loader.py
