[tool.poetry]
name = "fraud-detection-system"
version = "0.1.0"
description = "Fraud detection system using ML and graph-based techniques"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fraud_detection_system"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"  # Fixed Python version issue

# Core Data Processing
pandas = "^2.0.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
pyarrow = "^14.0.0"
duckdb = "^0.9.2"
fastparquet = "^2023.8.0"
feast = "^0.35.0"

# Machine Learning
scikit-learn = "^1.3.0"
xgboost = "^1.7.6"
networkx = "^3.1"

# API Development
fastapi = "^0.110.0"
pydantic = "^2.5.3"
uvicorn = "^0.29.0"

# Orchestration
flytekit = "^1.9.0"
zenml = "^0.43.1"

# Monitoring & Drift Detection
evidently = "^0.4.16"

# Security Enhancements
pycryptodome = "^3.19.0"
cryptography = "^41.0.5"

# Database & Graph Processing
sqlalchemy = "^2.0.21"
neo4j = "^5.14.0"

# Testing & Code Quality
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
mypy = "^1.6.0"

# Miscellaneous Utilities
requests = "^2.31.0"
tqdm = "^4.66.1"
faker = "^20.1.0"

[tool.poetry.group.dev.dependencies]  # Fixed deprecated section
pytest = "^7.4.2"
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
