[tool.poetry]
name = "fraud-detection-system"
version = "0.1.0"
description = "Fraud detection system using ML and graph-based techniques"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

# Specify correct package path
packages = [{ include = "fraud_detection_system", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Core Data Processing
pandas = "*"
numpy = "*"
scipy = "*"
pyarrow = "*"
duckdb = "*"
fastparquet = "*"
feast = "*"

# Machine Learning
scikit-learn = "*"
xgboost = "*"
networkx = "*"

# API Development
fastapi = "*"
pydantic = "*"
uvicorn = "*"

# Orchestration
flytekit = "*"
zenml = "^0.43.1"

# Monitoring & Drift Detection
evidently = "*"

# Security Enhancements
pycryptodome = "*"
cryptography = "*"

# Database & Graph Processing
sqlalchemy = "*"
neo4j = "*"

# Miscellaneous Utilities
requests = "*"
tqdm = "*"
faker = "*"

[tool.poetry.group.dev.dependencies]  # New dev dependencies group
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
