[tool.poetry]
name = "fraud-detection-system"
version = "0.1.0"
description = "Fraud detection system using ML and graph-based techniques"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "fraud_detection_system", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Data Processing
pandas = "1.5.3"  # Updated to be compatible with Feast
polars = "^0.19.0"  # Alternative to Dask if needed
dask = "<2022.02.0"  # Feast requires older Dask
pyarrow = "*"
duckdb = "*"
fastparquet = "*"
feast = "0.24.1"  # Latest compatible Feast version

# Machine Learning
scikit-learn = "*"
xgboost = "*"
networkx = "*"

# API Development
fastapi = "*"
pydantic = "*"
uvicorn = "*"

# Orchestration
flytekit = "*"
zenml = "^0.43.1"

# Monitoring & Drift Detection
evidently = "*"

# Security Enhancements
pycryptodome = "*"
cryptography = "*"

# Database & Graph Processing
sqlalchemy = "*"
neo4j = "*"

# Miscellaneous Utilities
requests = "*"
tqdm = "*"
faker = "*"

# BentoML & Cloud Dependencies
bentoml = "*"
docker = "*"
kubernetes = "*"
boto3 = "*"

# Build Dependencies (fixes NumPy PEP 517 issues)
setuptools = "*"
wheel = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
mypy = "*"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
